created card in JS

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="col-right">
         <div class="main">
             <div class="ui massive icon input">
-                <input type="text" placeholder="Search for a song or artist..." class="js-search input-search">
+                <input type="text" placeholder="Search for a genre..." class="js-search input-search">
                 <i class="search icon js-submit"></i>
             </div>
 
@@ -29,7 +29,7 @@
                      <div class="card_image"> <img src="https://i.redd.it/b3esnz5ra34y.jpg" /> </div>
                     
 
-                    <div class="card_title title-white">
+                    <div class="card_title">
     					<p><a href="https://soundcloud.com/barsuk-records/rilo-kiley-science-vs-romance" target="_blank">Science Vs. Romance</a></p>
   					</div>
 
