--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>SoundCloud Player</title>
     <link rel='stylesheet' href='styles/semantic.min.css'>
     <link rel='stylesheet' href='styles/main.css'>
+
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     
 
 </head>
@@ -13,6 +18,7 @@
 
 <div class="ui container col">
     <div class="col-left js-playlist">
+        <div class="loadBtnDiv"><button type="button" class="btn loadBtn">▶ Load Prev Playlist ▶</button></div>
         <div class="inner"></div>
     </div>
     <div class="col-right">
