--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 <body id="soundcloud-player">
 
+
 <div class="ui container col">
     <div class="col-left js-playlist">
         <div class="loadBtnDiv"><button type="button" class="btn loadBtn">▶ Load Prev Playlist ▶</button></div>
@@ -24,7 +25,7 @@
     <div class="col-right">
         <div class="main">
             <div class="ui massive icon input">
-                <input type="text" placeholder="Search for a genre..." class="js-search input-search">
+                <input type="text" id="inputtext" placeholder="Search for anything..." class="js-search input-search inputTxt">
                 <i class="search icon js-submit"></i>
             </div>
 
